# Customer-Churn-Prediction

./: .gitattributes  .gitignore  Guidlines.md  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: main.py
app/components/: charts.py  sidebar.py
app/pages/: customer_detail.py  model_metrics.py  overview.py
data/processed/: .gitkeep  cleaned_data.pkl
data/raw/: .gitkeep
models/: .gitkeep  xgb_churn_model.pkl
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_modeling.ipynb  04_shap_analysis.ipynb
src/: __init__.py  download_data.py  explain.py  predict.py  preprocess.py  train.py
tests/: test_preprocess.py
